Stop wrapping search-result lines. Fix bug 968368. Remove some CSS that was never used.
Strip whitespace from the beginning of result lines, which would otherwise now show up. (It could be informative, but I'm guessing it will more likely simply push result lines way over to the right.

--- a/dxr/static/css/dxr.css
+++ b/dxr/static/css/dxr.css
@@ -170,18 +170,14 @@ table.result_snippet tr,
     display: block;
     width: 100%;
 }
-.result_snippet a:nth-child(2) {
-    padding-left: .5rem;
-}
 .result_snippet a:target,
 .file a:target {
     background-color: gray;
     color: white;
     padding: 0 .5rem;
 }
-.result_snippet code a {
-    display: inline;
-    width: 100%;
+.result_snippet code {
+    white-space: pre;
 }
 /* end result-snippet */
 
